# Py-Project-CLI

./: Cargo.toml  README.md
src/: main.rs  pypi.rs  visit_files.rs
src/pypi/: api_data.rs  get_requirements.rs
templates/: pyproject.toml  setup.cfg
