[metadata]
name = ${project-name}
version = 0.1.0
description = ${project-description} 
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: ${py-version}
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy


[options]
packages = find:
package_dir = 
    =src
python_requires = >=${py-version}
install_requires =
    ${requirements}
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ${console-scripts}

[options.extras_require]
testing =
${testing-requirements}
development = 
${development-requirements}

[options.package_data]
move_cursor = py.typed

[flake8]
ignore = E203, W503
exclude = tests/*, stubs/*, *.pyi
